# generate-playlist

./: .env-example  .env.example  .gitignore  .releaserc.json  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  app.py  blacklist-backup.json  blacklist.json  compose.yml  config.py  deployment.yaml  deployment.yaml.example  docker-compose.yml  models.py  mongo_connection.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml  release.yml
.playwright-mcp/: page-2026-04-16T11-41-15-026Z.yml
alembic/: env.py
alembic/versions/: 162d836fb8ab_add_generation_history_tracks.py  298ada6f810a_add_track_cache_and_play_history.py  e65f91d609fd_initial_schema.py
api/: blacklist.py  playlist.py  spotify.py
call_it_magic/: blacklist.py  cache.py  sftp.py  spotify_functions.py
frontend/src/: confirm.test.ts  confirm.ts  flash.test.ts  flash.ts  htmx-setup.ts  main.ts
improve/: mongo_authentication.py  mongo_connection.py
lib/: autoblueprint.py  blacklist.py  mongo.py  playlist.py  spotify.py
migrations/versions/: 1b775b9d9ad0_make_spotify_id_unique.py  bda6f9de0ff1_add_id_type.py  cd3685ee085a_blacklist_table.py
playlist_generator/: __init__.py  blacklist.py  config.py  database.py  dependencies.py  encryption.py  main.py  playlists.py  spotify_functions.py  spotify_functions_test.py
playlist_generator/models/: __init__.py  base_list.py  blacklist.py  cover_image.py  history.py  target.py  track_cache.py  user.py
playlist_generator/routers/: actions.py  auth.py  base_list.py  blacklist.py  cover_image.py  generation.py  pages.py  skips.py  spotify_browse.py  targets.py
playlist_generator/services/: base_list.py  blacklist.py  cover_image.py  generation.py  skips.py  spotify_auth.py  track_cache.py
routes/: home.py  spotify.py
seeds/: blacklist.json
static/js/: app.iife.js
static/styles/: app.css
templates/layouts/: base.html
templates/pages/: actions_blacklist.html  actions_not-set.html  actions_playlists.html  base_list.html  blacklist.html  cover_image.html  dashboard.html  error.html  generate.html  history.html  index.html  skips.html  (+3 more)
tests/: conftest.py  test_auth.py  test_base_list.py  test_blacklist.py  test_blacklist_manager.py  test_cover_image.py  test_dependencies.py  test_encryption.py  test_generation.py  test_models.py  test_playlist_manager.py  test_routes_actions.py  test_routes_auth.py  test_routes_blacklist.py  test_routes_playlists.py  test_spotify_functions.py  test_spotify_functions_extended.py
(+10 files in other folders)
