[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "generate-playlist"
version = "0.1.0"
description = ""
authors = ["Steven de jong <sdejong@cloudsuite.com>"]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
flask = "^3.1.2"
dotenv = "^0.9.9"
flask-session = "^0.8.0"
spotipy = "^2.25.2"
pillow = "^12.0.0"
