[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["playlist_generator"]

[project]
name = "generate-playlist"
version = "1.0.0"
description = ""
authors = [{name = "Steven de Jong", email = "sdejong@cloudsuite.com"}]
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.0",
    "spotipy>=2.25.2",
    "pillow>=12.0.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "cryptography>=44.0",
    "pydantic-settings>=2.0",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27.0",
    "anyio[trio]>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["playlist_generator"]
branch = true
omit = [
    "playlist_generator/main.py",
    "playlist_generator/routers/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 70
